# qwen-soccerscope

./: .gitignore  README.md
app/: deploy.sh  main.py  requirements.txt
app/soccer_agent/: agent.py
app/static/: index.html
pipeline/: 1_embed_videos.py  2_load_to_mongo.py  3_analyze_comments.py  4_load_comment_analysis.py  pyproject.toml
