[project]
name = "qwen-soccer-pipeline"
version = "0.1.0"
description = "SoccerScope Qwen移植版 データパイプライン（embedding / MongoDB投入 / コメント感情分析）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pymongo[srv]>=4.6.0",
    "numpy>=2.0.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
]
